[project]
name = "ietf-comments-engine"
dynamic = ["version"]
authors = [
    {name="Mark Nottingham", email="mnot@mnot.net"}
]
description = "DESCRIPTION"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE.md"]
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"
]

dependencies = [
    "commonmark"
]

[project.optional-dependencies]
dev = ["mypy", "black", "pylint", "pytest", "pytest-md", "validate-pyproject", "build", "types-commonmark"]

[project.urls]
homepage = "https://github.com/mnot/ietf-comments-engine"

[project.scripts]


[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "ietf_comments_engine.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["ietf_comments_engine", "ietf_comments_engine.*"]
namespaces = false

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
ietf_comments_engine = ["py.typed"]

